--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>News API</title>
 </head>
 <body>
-    <header><h1>News API</h1></header>
+    <header><a href="https://newsapi.org"><h1>News API</h1></a></header>
     <div class="content">
         <div class="content__data">
             <div class="search">
